objects/AccountShiptoAddress__c.object
<CustomObject>
    <description>Custom object which has master/detail relationship with Account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master/detail for Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship-to Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryLabel__c</fullName>
        <label>Country Label</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalCountries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultAll__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>Field to make &apos;All&apos; searchable for Ship-to-addresses</description>
        <label>DefaultAll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImcdCompany__c</fullName>
        <formula>TEXT(Account__r.IMCDCompany__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMCD Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>$Label.IMCD_HELP_ShipToAddress</defaultValue>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JdeId__c</fullName>
        <externalId>true</externalId>
        <label>JDE Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LocalErpId__c</fullName>
        <externalId>true</externalId>
        <label>Local ERP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsftId__c</fullName>
        <externalId>true</externalId>
        <label>PSFT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Ship-to Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship-to Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AllowedNewRecord</fullName>
        <active>true</active>
        <description>Rules checks if a new address is allowed.</description>
        <errorConditionFormula>IF ( 
  $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c =True &amp;&amp; NOT ( $Permission.LockedAccountBypass ) &amp;&amp;
  OR ( 
    Account__r.RecordType.DeveloperName &lt;&gt; &apos;Customer_Prospect&apos;, Account__r.LockedForIntegration__c = true, Account__r.NumShipToAddresses__c &gt; 0
  ), 
  OR ( 
    IF ( AND ( ISNEW (), NOT ( $Permission.LockedAccountBypass ) ), true, false ) 
  ), 
  false 
)</errorConditionFormula>
        <errorMessage>You&apos;re only allowed to create a single ship-to address for a prospect account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockedAccountReadonly</fullName>
        <active>true</active>
        <description>Ship to&apos;s are mastered in ERP and can only be added once to a prospect.</description>
        <errorConditionFormula>AND(
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 
NOT ( $Permission.LockedAccountBypass ), 
Account__r.LockedForIntegration__c, 
OR (
ISNEW(),
ISCHANGED ( City__c ),
ISCHANGED ( Country__c ),
ISCHANGED ( Street__c ),
ISCHANGED ( State__c ),
ISCHANGED ( PostalCode__c )
)
)</errorConditionFormula>
        <errorMessage>You&apos;re only allowed changes for a ship-to address related with a prospect. You can edit this information in your ERP system.</errorMessage>
    </validationRules>
</CustomObject>